--- a/.github/workflows/Vote-CI.yml
+++ b/.github/workflows/Vote-CI.yml
@@ -22,6 +22,6 @@ jobs:
         image: iamnilanjan3/vote
         tags: ${{ github.run_attempt }}, latest
         registry: docker.io
-        dockerfile: vote/Dockerfile
+        dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
