--- a/.github/workflows/Vote-CI.yml
+++ b/.github/workflows/Vote-CI.yml
@@ -29,4 +29,4 @@ jobs:
       name: Replace tag
       with:
         files: Deployment.yml
-        replacements: '$tag=${{ github.run_attempt }}'
+        replacements: '$tagg=${{ github.run_attempt }}'
