--- a/Deployment.yml
+++ b/Deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: vote
-        image: iamnilanjan3/vote: $tag
+        image: iamnilanjan3/vote: $tagg
         ports:
         - containerPort: 80
 
