--- a/.github/workflows/Vote-CI.yml
+++ b/.github/workflows/Vote-CI.yml
@@ -39,5 +39,5 @@ jobs:
     - name: commit changed files
       run: |
        git config --global user.email "rahulgandhi2803@gmail.com"
-       git config --global user.name "rahul"
+       git config --global user.name "github-actions[bot]"
        git push
