--- a/.github/workflows/Vote-CI.yml
+++ b/.github/workflows/Vote-CI.yml
@@ -40,4 +40,8 @@ jobs:
       run: |
        git config --global user.email "rahulgandhi2803@gmail.com"
        git config --global user.name "github-actions[bot]"
-       git push
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: 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
+        
