--- a/.github/workflows/Vote-CI.yml
+++ b/.github/workflows/Vote-CI.yml
@@ -41,7 +41,7 @@ jobs:
        git config --global user.email "rahulgandhi2803@gmail.com"
        git config --global user.name "github-actions[bot]"
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@v0.6.0
       with:
         github_token: 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
         
